2013-07-18  Charlie Zender  <zender@uci.edu>

	* Fix string and string-array printing for NC_STRING

	* Ooops, CDL mode always prints on-disk dimension sizes even when hyperslabbing

2013-07-17  Charlie Zender  <zender@uci.edu>

	* Document ncks --cdl switch. texi2dvi nco.texi works on Ubuntu, fails on Fedora

	* Change DDRA to print to stderr not stdout to simplify CDL mode

	* Fix dimension name printed in compact lists due to mis-nested indices

	* Implement CDL user switch --cdl

	* CDL output is more compact (less unnecessary information) than ncdump

	* Successful CDL output by ncks and conversion by ncgen

	* Tidy ncoGrammer.g

2013-07-16  Charlie Zender  <zender@uci.edu>

	* Mark extracted dimensions with nco_xtr_dmn_mrk()

	* Isolate nco_xtr_grp_mrk() from nco_xtr_dfn()

	* New MSVC macros for isinf(), isfinite(), isnan()"

	* CDL mode prints all floating point values correctly

	* Variable number of trailing zeros implemented with sng_trm_trl_zro()

	* Isolate MSVC definitions and macros in nco_rth_flt.h

2013-07-15  Charlie Zender  <zender@uci.edu>

	* sng_trm_trl_zro() trims trailing zeros

	* CDL mode works for non-char variables for attributes, dies for float attributes

2013-07-15 Pedro Vicente  <pvicente@uci.edu>

	* Add in_grp_3.cdl group data for ncwa testing

	* nco_var_get_trv() Fill-in variable structure for weighting variable "var_nm"

2013-07-12  Charlie Zender  <zender@uci.edu>

	* CDL mode for variable shape and attributes mostly works

	* NCO 4.3.3 release procedure:
 	Changes since nco-4_3_2: -X aux, ncflint/ncpdq -g -G --unn
	cd ~/nco;cvs tag -d nco-4_3_3;cvs tag -d nco-4_3_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.3 release"
	cvs tag -c nco-4_3_3;cvs tag -c nco-4_3_3-1

	* Implement CDL mode in variable header in nco_prn_var_dfn()

	* Fix printing so only extracted sub-groups show up

	* Remaining issues include self-consistent group flg_xtr, also broken with old method

2013-07-11  Charlie Zender  <zender@uci.edu>
