@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncks.c,v 1.635 2013-07-18 17:50:37 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncks.c,v 1.636 2013-07-18 20:11:04 zender Exp $ */
 
 /* ncks -- netCDF Kitchen Sink */
 
@@ -151,8 +151,8 @@ main(int argc,char **argv)
 
   char trv_pth[]="/"; /* [sng] Root path of traversal tree */
 
-  const char * const CVS_Id="$Id: ncks.c,v 1.635 2013-07-18 17:50:37 zender Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.635 $";
+  const char * const CVS_Id="$Id: ncks.c,v 1.636 2013-07-18 20:11:04 zender Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.636 $";
   const char * const opt_sht_lst="3456aABb:CcD:d:FG:g:HhL:l:MmOo:Pp:qQrRs:uv:X:xz-:";
 
   cnk_sct **cnk=NULL_CEWI;
@@ -718,6 +718,14 @@ main(int argc,char **argv)
     nco_exit(EXIT_FAILURE);
   } /* endif fl_bnr */
     
+  if(gpe){
+    if(dbg_lvl >= nco_dbg_fl) (void)fprintf(stderr,"%s: INFO Group Path Edit (GPE) feature enabled\n",prg_nm_get());
+    if(fl_out && fl_out_fmt != NC_FORMAT_NETCDF4){
+      (void)fprintf(stderr,"%s: ERROR Group Path Edit requires requires netCDF4 output format but user explicitly requested format = %s\n",prg_nm_get(),nco_fmt_sng(fl_out_fmt));
+      nco_exit(EXIT_FAILURE);
+    } /* endif err */
+  } /* !gpe */
+
   if(fl_out){
     /* Output file was specified so PRN_ tokens refer to (meta)data copying */
     int out_id;
@@ -731,14 +739,6 @@ main(int argc,char **argv)
     /* Open output file */
     fl_out_tmp=nco_fl_out_open(fl_out,FORCE_APPEND,FORCE_OVERWRITE,fl_out_fmt,&bfr_sz_hnt,RAM_CREATE,RAM_OPEN,WRT_TMP_FL,&out_id);
     
-    if(gpe){
-      if(dbg_lvl >= nco_dbg_fl) (void)fprintf(stderr,"%s: INFO Group Path Edit (GPE) feature enabled\n",prg_nm_get());
-      if(fl_out_fmt != NC_FORMAT_NETCDF4){
-        (void)fprintf(stderr,"%s: ERROR Group Path Edit requires requires netCDF4 output format but user explicitly requested format = %s\n",prg_nm_get(),nco_fmt_sng(fl_out_fmt));
-        nco_exit(EXIT_FAILURE);
-      } /* endif err */
-    } /* !gpe */
-
     /* Define extracted groups, variables, and attributes in output file */
     (void)nco_xtr_dfn(in_id,out_id,&cnk_map,&cnk_plc,cnk_sz_scl,cnk,cnk_nbr,dfl_lvl,gpe,True,True,rec_dmn_nm,trv_tbl);
 
@@ -803,6 +803,7 @@ main(int argc,char **argv)
       if(sfx_ptr) *sfx_ptr='\0';
       prn_flg.fl_stb=fl_nm_stub;
     } /* endif CDL */
+    prn_flg.gpe=gpe;
     prn_flg.nbr_zro=0;
     prn_flg.spc_per_lvl=2;
     prn_flg.sxn_fst=2;
